--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera</title>
+	<title>Hello World</title>
 </head>
 <body>
-<h1>Hello coursera.its a great course.thank you coursera!!</h1>
+<h1>Hello World!!</h1>
 </body>
 </html>
