--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,26 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the Restaurant</title>
+    <title>Module 2 Assignment </title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <h1>Our Menu</h1>
-
     <div class="row">
-        <section class="col-lg-3" class="col-md-6">
-            <h2>Chicken</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et efficitur odio. Integer sit amet blandit est, in tincidunt dolor. Fusce euismod eleifend magna ut condimentum. Suspendisse malesuada nulla in tortor bibendum molestie.</p>
-        </section>
-        <section class="col-lg-3" class="col-md-6">
-            <h2>Beef</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et efficitur odio. Integer sit amet blandit est, in tincidunt dolor. Fusce euismod eleifend magna ut condimentum. Suspendisse malesuada nulla in tortor bibendum molestie.</p>
-        </section>
-        <section class="col-lg-3" class="col-md-6" class="p3">
-            <h2>Sushi</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et efficitur odio. Integer sit amet blandit est, in tincidunt dolor. Fusce euismod eleifend magna ut condimentum. Suspendisse malesuada nulla in tortor bibendum molestie.</p>
-        </section>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section>
+                <h2 id="a">Chicken</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et efficitur odio. Integer sit amet blandit est, in tincidunt dolor. Fusce euismod eleifend magna ut condimentum. Suspendisse malesuada nulla in tortor bibendum molestie.</p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section>
+                <h2 id="b">Beef</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et efficitur odio. Integer sit amet blandit est, in tincidunt dolor. Fusce euismod eleifend magna ut condimentum. Suspendisse malesuada nulla in tortor bibendum molestie.</p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section>
+                <h2 id="c">Sushi</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et efficitur odio. Integer sit amet blandit est, in tincidunt dolor. Fusce euismod eleifend magna ut condimentum. Suspendisse malesuada nulla in tortor bibendum molestie.</p>
+            </section>
+        </div>
     </div>
 </body>
 
